# socketUtils

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/android/socket/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/socket/: jni_socket.cpp
app/src/main/cpp/socket/client/: socketclient.cpp  socketclient.h  socketglobal.h
app/src/main/cpp/socket/server/: socketglobal.h  socketserver.cpp  socketserver.h
app/src/main/java/com/android/socket/: ISocketCallBack.java  MainActivity.java  SocketUtils.java
app/src/test/java/com/android/socket/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
